kubernetes/tax-receipts/stage/statefulset.yaml
# genk8s:hash=72b5b8389a9b2733460e71ff109d5a52
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tax-receipts
  labels:
    app: tax-receipts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tax-receipts
  template:
    metadata:
      labels:
        app: tax-receipts
    spec:
      volumes:
      - name: data
        configMap:
          name: tax-receipts-nginx
      containers:
      - name: api
        imagePullPolicy: Always
        image: northamerica-northeast2-docker.pkg.dev/gpo-eng-stage/gpo/tax-receipts-api:staging
        readinessProbe:
          httpGet:
            path: /health
            port: http
      - name: web
        image: northamerica-northeast2-docker.pkg.dev/gpo-eng-stage/gpo/tax-receipts:staging
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
